--- a/android_vendor_itinerary/app/src/main/res/layout/ver_data_view.xml
+++ b/android_vendor_itinerary/app/src/main/res/layout/ver_data_view.xml
@@ -8,64 +8,101 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/_30dip">
 
-        <TextView
-            android:id="@+id/verid"
-            android:layout_width="@dimen/_20dip"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="0.25"
-            android:gravity="center"
-            android:text="@string/id"
-            android:textColor="@android:color/black"
-            android:textSize="@dimen/_15sip" />
-
-        <TextView
-            android:id="@+id/facrura"
-            android:layout_width="@dimen/_100dip"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="0.25"
-            android:gravity="center"
-            android:text="@string/factura"
-            android:textColor="@android:color/black"
-            android:textSize="@dimen/_15sip" />
-
-        <TextView
-            android:id="@+id/saldo"
-            android:layout_width="@dimen/_20dip"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="0.25"
-            android:gravity="center"
-            android:text="@string/saldo"
-            android:textColor="@android:color/black"
-            android:textSize="@dimen/_15sip" />
-
         <RelativeLayout
-            android:layout_width="@dimen/_5dip"
+            android:layout_width="@dimen/_20dip"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="0.25">
+            android:layout_marginTop="-1dp"
+            android:layout_weight="0.2"
+            android:background="@drawable/boarder_squer">
 
-            <CheckBox
-                android:id="@+id/checkboxx"
-                android:layout_centerInParent="true"
-                android:layout_width="@dimen/_30dip"
-                android:layout_height="wrap_content"
+            <TextView
+                android:id="@+id/verid"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:text="@string/id"
                 android:textColor="@android:color/black"
                 android:textSize="@dimen/_15sip" />
 
         </RelativeLayout>
 
+        <RelativeLayout
+            android:layout_width="@dimen/_90dip"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="-1dp"
+            android:layout_marginTop="-1dp"
+            android:layout_weight="0.2"
+            android:background="@drawable/boarder_squer">
 
+            <TextView
+                android:id="@+id/facrura"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:text="@string/factura"
+                android:textColor="@android:color/black"
+                android:textSize="@dimen/_15sip" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="@dimen/_30dip"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="-1dp"
+            android:layout_marginTop="-1dp"
+            android:layout_weight="0.2"
+            android:background="@drawable/boarder_squer">
+
+            <TextView
+                android:id="@+id/saldo"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:text="@string/saldo"
+                android:textColor="@android:color/black"
+                android:textSize="@dimen/_15sip" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="@dimen/_30dip"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="-1dp"
+            android:layout_marginTop="-1dp"
+            android:layout_weight="0.2"
+            android:background="@drawable/boarder_squer">
+
+            <EditText
+                android:id="@+id/valor"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:background="@drawable/boarder_squer"
+                android:gravity="center"
+                android:hint="Izquierda"
+                android:inputType="number"
+                android:textColor="@android:color/black"
+                android:textSize="@dimen/_15sip" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="@dimen/_5dip"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="-1dp"
+            android:layout_marginTop="-1dp"
+            android:layout_weight="0.2"
+            android:background="@drawable/boarder_squer">
+
+            <CheckBox
+                android:id="@+id/checkboxx"
+                android:layout_width="@dimen/_30dip"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:textColor="@android:color/black"
+                android:textSize="@dimen/_15sip" />
+
+        </RelativeLayout>
     </LinearLayout>
-
-    <RelativeLayout
-        android:id="@+id/relll"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_1dip"
-        android:layout_below="@+id/plate"
-        android:background="@android:color/black" />
-
-
 </RelativeLayout>
