--- a/android_vendor_itinerary/app/src/main/res/values/dimens.xml
+++ b/android_vendor_itinerary/app/src/main/res/values/dimens.xml
@@ -26,6 +26,7 @@
     <dimen name="_70dip">70dp</dimen>
     <dimen name="_2dip">2dp</dimen>
     <dimen name="_80dip">80dp</dimen>
+    <dimen name="_90dip">90dp</dimen>
 
 
 </resources>
