--- a/android_vendor_itinerary/app/src/main/res/layout/activity_form.xml
+++ b/android_vendor_itinerary/app/src/main/res/layout/activity_form.xml
@@ -99,10 +99,9 @@
                     android:layout_height="wrap_content"
                     android:layout_toEndOf="@+id/txt_3"
                     android:layout_toRightOf="@+id/txt_3"
+                    android:lines="2"
                     android:textColor="@android:color/black"
-                    android:textSize="@dimen/_15sip"
-                    android:lines="2"/>
-
+                    android:textSize="@dimen/_15sip" />
 
 
             </RelativeLayout>
@@ -215,6 +214,13 @@
                 android:text="@string/add_photo"
                 android:textAllCaps="false"
                 android:textColor="@color/colorAccent" />
+
+            <ImageView
+                android:id="@+id/img_view"
+                android:layout_width="@dimen/_100dip"
+                android:layout_height="@dimen/_100dip"
+                android:layout_below="@+id/recycle_view_new"
+                android:layout_margin="@dimen/_10dip" />
 
             <Button
                 android:id="@+id/btn_print"
