--- a/android_vendor_itinerary/app/src/main/res/layout/new_form_list.xml
+++ b/android_vendor_itinerary/app/src/main/res/layout/new_form_list.xml
@@ -14,7 +14,7 @@
             android:layout_width="@dimen/_50dip"
             android:layout_height="wrap_content"
             android:layout_marginTop="-1dp"
-            android:layout_weight="0.2"
+            android:layout_weight="0.40"
             android:background="@drawable/boarder_squer">
 
             <TextView
@@ -33,7 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="-1dp"
             android:layout_marginTop="-1dp"
-            android:layout_weight="0.2"
+            android:layout_weight="0.15"
             android:background="@drawable/boarder_squer">
 
             <TextView
@@ -52,7 +52,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="-1dp"
             android:layout_marginTop="-1dp"
-            android:layout_weight="0.2"
+            android:layout_weight="0.15"
             android:background="@drawable/boarder_squer">
 
             <TextView
@@ -62,6 +62,26 @@
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:text="@string/total"
+                android:textColor="@android:color/black"
+                android:textSize="@dimen/_15sip" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="-1dp"
+            android:layout_marginTop="-1dp"
+            android:layout_weight="0.30"
+            android:background="@drawable/boarder_squer">
+
+            <TextView
+                android:id="@+id/tv_total_sin_aplicar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:text="@string/sinaplicar"
                 android:textColor="@android:color/black"
                 android:textSize="@dimen/_15sip" />
 
